# lease_cache_simulator

./: .gitignore  Cargo.toml  README.md  fakeTable.csv  rust-toolchain.toml  trace.csv
lease_cache_sim/: Cargo.toml
lease_cache_sim/src/: cache.rs  lease_table.rs  lru_sim.rs  main.rs  note  run.sh  virtualCache.rs  virtual_cache.rs
lease_cache_sim/testInput/: 3mm_output_shel_leases  gemm_output_shel_leases  gramschmidt_output_shel_leases  lu_output_shel_leases  matmul_output_shel_leases  mvt_output.txt  mvt_output_shel_leases  syrk_output_shel_leases  trisolv_output.txt  trisolv_output_shel_leases  trmm_output_shel_leases  trmm_output_short.txt
src/: cache.rs  main.rs  virtualCache.rs
trace_gen/: Cargo.toml
trace_gen/src/: main.rs  sampling.rs
