[package]
name = "trace_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stack_alg_sim = { path = "../../dace/lru/stack_alg_sim" }
hist = { path = "../../dace/hist" }
dace = { path = "../../dace/dace" }
list_serializable = { path = "../../dace/list_serializable" }
dace_tests = { path = "../../dace/dace_tests" }
tracing = "0.1.37"
fxhash = "0.2.1"
tracing-subscriber = "0.3.17"